@startuml
skinparam classAttributeIconSize 0

class Colaborador {
  -String nome
  -String funcao
  -String telefone
  -String email
  +Colaborador(nome,função,tlf, email)
  +String getNome()
  +String getEmail()
}

class EnderecoPostal {
  -String local
  -String codPostal
  -String localidade
  +EnderecoPostal(local,codPostal,localidade)
}

class Organizacao {
  -String nome
  -String NIF
  -String website
  -String telefone
  -String email
  +Organizacao(nome, NIF,webSite,telefone, email,endereco,gestorColaborador)
  +{static} EnderecoPostal novoEndereco(local,codPostal,localidade)
  +{static} Colaborador novoColaborador(nome,funcao,tlf, email)
}

class Plataforma {
  -String designacao
  
  +Organizacao novaOrganizacao(nome,NIF,endLocal,endCodPostal,\nendLocalidade,tlf,site,email,nomeG,função,tlfG, emailG)
  +validaOrganizacao(Organizacao org, pwd)
  +registaAreaAtividade(Organizacao org, pwd)
  -addOrganizacao(Organizacao org)
}

class AutorizacaoFacade {
   +registaUtilizadorComPapeis(nomeG,emailG,pwd,listaPapel)
}

class RegistarOrganizacaoController {
    +novaOrganizacao(nome,NIF,endLocal,endCodPostal,endLocalidade,tlf,site,email,nomeG,função,tlfG, emailG,pwd)
    +registaOrganizacao()
}

class RegistarOrganizacaoUI {
}

RegistarOrganizacaoUI ..> RegistarOrganizacaoController
RegistarOrganizacaoController ..> Plataforma
RegistarOrganizacaoController ..> Organizacao
Plataforma ..> Colaborador
Plataforma ..> EnderecoPostal
Plataforma ..> AutorizacaoFacade
Plataforma "1" --> "*" Organizacao : tem registadas
Organizacao "1" --> "1..*" Colaborador: tem 
Organizacao "1" --> "1" Colaborador: tem gestor
Organizacao "1" --> "1" EnderecoPostal: localizada em

@enduml
